--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="header">
       <div class="container">
         <div class="container-menu"><a class="logo" href="./"><img src="assets/img/icons/logo.svg" alt="logo"/></a>
-          <nav class="menu"><a class="menu__link" href="./services.html">Консультации</a><a class="menu__link" href="./training.html">Услуги</a><a class="menu__link" href="./price.html">Треннинги</a><a href="https://www.youtube.com/watch?v=sQD4KcCV-40" target="_blank">Блог</a>
+          <nav class="menu"><a class="menu__link" href="./">Консультации</a><a class="menu__link" href="#four">Услуги</a><a class="menu__link" href="./price.html">Треннинги</a><a href="https://www.youtube.com/watch?v=sQD4KcCV-40" target="_blank">Блог</a>
                 <div class="social-media"><a href="https://ru-ru.facebook.com" target="_blank">
                     <svg class="facebook" width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M24 12.074C24 5.40502 18.6269 -0.000976562 11.9999 -0.000976562C5.36995 0.000523438 -0.00305176 5.40502 -0.00305176 12.0755C-0.00305176 18.101 4.38595 23.096 10.1219 24.002V15.5645H7.07695V12.0755H10.1249V9.41302C10.1249 6.38752 11.9174 4.71652 14.6579 4.71652C15.9719 4.71652 17.3444 4.95202 17.3444 4.95202V7.92202H15.8309C14.3414 7.92202 13.8764 8.85352 13.8764 9.80902V12.074H17.2034L16.6724 15.563H13.8749V24.0005C19.6109 23.0945 24 18.0995 24 12.074Z" fill="#282C37"></path>
@@ -28,7 +28,7 @@
           <button class="burger d-md-none"><span></span><span></span><span></span></button>
           <div class="mobail-menu d-md-none">
             <div class="container"><img class="mobail-menu__close" src="assets/img/icons/close.svg"/>
-              <div class="mobail-menu__inner"><img class="mobile-menu__logo" src="assets/img/icons/logo2.svg" alt=""/><a class="menu__link" href="./services.html">Консультации</a><a class="menu__link" href="./training.html">Услуги</a><a class="menu__link" href="./price.html">Треннинги</a><a href="https://www.youtube.com/watch?v=sQD4KcCV-40" target="_blank">Блог</a>
+              <div class="mobail-menu__inner"><img class="mobile-menu__logo" src="assets/img/icons/logo2.svg" alt=""/><a class="menu__link" href="./">Консультации</a><a class="menu__link" href="#four">Услуги</a><a class="menu__link" href="./price.html">Треннинги</a><a href="https://www.youtube.com/watch?v=sQD4KcCV-40" target="_blank">Блог</a>
                     <div class="social-media"><a href="https://ru-ru.facebook.com" target="_blank">
                         <svg class="facebook" width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M24 12.074C24 5.40502 18.6269 -0.000976562 11.9999 -0.000976562C5.36995 0.000523438 -0.00305176 5.40502 -0.00305176 12.0755C-0.00305176 18.101 4.38595 23.096 10.1219 24.002V15.5645H7.07695V12.0755H10.1249V9.41302C10.1249 6.38752 11.9174 4.71652 14.6579 4.71652C15.9719 4.71652 17.3444 4.95202 17.3444 4.95202V7.92202H15.8309C14.3414 7.92202 13.8764 8.85352 13.8764 9.80902V12.074H17.2034L16.6724 15.563H13.8749V24.0005C19.6109 23.0945 24 18.0995 24 12.074Z" fill="#282C37"></path>
@@ -60,42 +60,42 @@
           </div>
           <div class="img col-md-5"><img src="assets/img/icons/image.svg" alt=""/></div>
         </div>
-        <div class="four__wrapper">
+        <div class="four__wrapper" id="four">
           <div class="row justify-content-evenly four__container">
             <div class="col-11 col-md-6 col-lg-5 block"><img src="assets/img/icons/logo3.svg" alt=""/>
-              <p class="col-xl-8 col-lg-8 col-md-9">Как найти точки роста и определить цели?</p>
+              <p class="col-xl-7 col-lg-8 col-md-9">Как найти точки роста и определить цели?</p>
             </div>
             <div class="col-11 col-md-6 col-lg-4 block"><img src="assets/img/icons/logo3.svg" alt=""/>
-              <p class="col-xl-8 col-lg-10 col-md-9">Как увеличить прибыль, управляя ценами?</p>
+              <p class="col-xl-7 col-lg-10 col-md-9">Как увеличить прибыль, управляя ценами?</p>
             </div>
             <div class="col-11 col-md-6 col-lg-5 block"><img src="assets/img/icons/logo3.svg" alt=""/>
-              <p class="col-xl-8 col-lg-8 col-md-9">Как избежать проблем на старте нового бизнеса?</p>
+              <p class="col-xl-6 col-lg-8 col-md-9">Как избежать проблем на старте нового бизнеса?</p>
             </div>
             <div class="col-11 col-md-6 col-lg-4 block"><img src="assets/img/icons/logo3.svg" alt=""/>
-              <p class="col-xl-10 col-lg-8 col-md-10">Как не попасть в "черную дыру" затрат на продвижение?</p>
+              <p class="col-xl-8 col-lg-8 col-md-10">Как не попасть в "черную дыру" затрат на продвижение?</p>
             </div>
           </div>
         </div>
-        <div class="row blue__container"><img class="blue__svg" src="assets/img/icons/cube_one.svg" alt=""/><img class="blue__line" src="assets/img/icons/line-serv_ipad.svg" alt=""/>
+        <div class="row blue__container"><img class="blue__svg" src="assets/img/icons/cube_one.svg" alt=""/>
           <p class="blue__text-title">Услуги</p>
           <div class="col-md-4 col-sm-6 col-12">
             <div class="block__blue-first block-blue__size"><img src="assets/img/icons/plan.svg" alt=""/>
-              <p>Разрабатываем маркетинг-план: дорожная карта достижения целей</p>
+              <p> <a href="./services.html">Разрабатываем маркетинг-план: дорожная карта достижения целей</a></p>
             </div>
           </div>
           <div class="col-md-8 col-sm-6 col-12">
             <div class="block__blue-second block-blue__size"><img src="assets/img/icons/lamp.svg" alt=""/>
-              <p>Повышаем эффективность продвижения: аудит существующей модели</p>
+              <p><a href="./services.html">Повышаем эффективность продвижения: аудит существующей модели</a></p>
             </div>
             <div class="row responsive__web">
               <div class="col-md-6 col-sm-6">
                 <div class="block__blue-third block-blue__size"><img src="assets/img/icons/search.svg" alt=""/>
-                  <p>Находим скрытую прибыль: анализ модели ценообразования</p>
+                  <p><a href="./services.html">Находим скрытую прибыль: анализ модели ценообразования</a></p>
                 </div>
               </div>
               <div class="col-md-6 col-sm-6">
                 <div class="block__blue-fourth block-blue__size"><img src="assets/img/icons/startup.svg" alt=""/>
-                  <p>Запускаем новый проект: start-up маркетинг</p>
+                  <p> <a href="./services.html">Запускаем новый проект: start-up маркетинг</a></p>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
               <textarea class="modal-order__input modal-order__input_multiline" id="modal-order-text-issue" placeholder="Пожалуйста опишите вашу проблему" name="issue"></textarea>
               <p class="modal-order__input-error-label" id="modal-order-text-issue-err"></p>
             </div>
-            <button class="btn-default modal-order__btn-submit" id="modal-order-btn-submit" type="submit">Отправить</button>
+            <button class="modal-order__btn-submit" id="modal-order-btn-submit" type="submit">Отправить</button>
           </form>
           <div class="modal-order__success-label d-flex justify-content-center text-center" id="modal-order-label-success">
             <p>Ваша заявка успешно отправлена</p>
