--- a/index.html
+++ b/index.html
@@ -76,40 +76,22 @@
             </div>
           </div>
         </div>
-        <div class="row blue__container"><img class="blue__svg" src="assets/img/icons/cube_one.svg" alt=""/>
-          <p class="blue__text-title">Услуги</p>
-          <div class="col-md-4 col-sm-6 col-12">
-            <div class="block__blue-first block-blue__size"><img src="assets/img/icons/plan.svg" alt=""/>
-              <p> <a href="./services.html">Разрабатываем маркетинг-план: дорожная карта достижения целей</a></p>
-            </div>
-          </div>
-          <div class="col-md-8 col-sm-6 col-12">
-            <div class="block__blue-second block-blue__size"><img src="assets/img/icons/lamp.svg" alt=""/>
-              <p><a href="./services.html">Повышаем эффективность продвижения: аудит существующей модели</a></p>
-            </div>
-            <div class="row responsive__web">
-              <div class="col-md-6 col-sm-6">
-                <div class="block__blue-third block-blue__size"><img src="assets/img/icons/search.svg" alt=""/>
-                  <p><a href="./services.html">Находим скрытую прибыль: анализ модели ценообразования</a></p>
-                </div>
-              </div>
-              <div class="col-md-6 col-sm-6">
-                <div class="block__blue-fourth block-blue__size"><img src="assets/img/icons/startup.svg" alt=""/>
-                  <p> <a href="./services.html">Запускаем новый проект: start-up маркетинг</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-12 responsive__ipad">
-            <div class="block__blue-third block-blue__size"><img src="assets/img/icons/search.svg" alt=""/>
-              <p>Находим скрытую прибыль: анализ модели ценообразования</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-12 responsive__ipad">
-            <div class="block__blue-fourth block-blue__size"><img src="assets/img/icons/startup.svg" alt=""/>
-              <p>Запускаем новый проект: start-up маркетинг</p>
-            </div>
-          </div>
+      </div>
+    </section>
+    <section class="services w-100" id="services">
+      <div class="container">
+        <div class="services__title w-100">
+          <h1 class="services__title-text">Услуги</h1><img class="services__title-img-poly" src="assets/img/icons/cube_one.svg" alt="polygon"/><img class="services__title-img-arrow" src="assets/img/icons/line-serv_web.svg" alt="arrow"/>
+        </div>
+        <div class="row services__items">
+          <div class="col-sl-12 col-md-6 col-lg-4"><a class="services__item services__img-report_height" href="./services.html"><img class="services__item-img" src="assets/img/icons/plan.svg" alt="report"/>
+              <p class="services__item-text">Разрабатываем маркетинг-план: дорожная карта достижения целей </p></a></div>
+          <div class="col-sl-12 col-md-6 col-lg-8"><a class="services__item services__img-idea_height services__img-idea_justify" href="./services.html"><img class="services__item-img" src="assets/img/icons/lamp.svg" alt="idea"/>
+              <p class="services__item-text">Повышаем эффективность продвижения: аудит существующей модели</p></a></div>
+          <div class="col-sl-12 col-md-6 col-lg-4 item_up"><a class="services__item services__img-search_height" href="./services.html"><img class="services__item-img" src="assets/img/icons/search.svg" alt="search"/>
+              <p class="services__item-text">Находим скрытую прибыль: анализ модели ценообразования </p></a></div>
+          <div class="col-sl-12 col-md-6 col-lg-4 item_up"><a class="services__item services__img-startup_height" href="./services.html"><img class="services__item-img services__item-img_startup" src="assets/img/icons/startup.svg" alt="startup"/>
+              <p class="services__item-text">Запускаем новый проект: start-up маркетинг</p></a></div>
         </div>
       </div>
     </section>
