--- a/price.html
+++ b/price.html
@@ -45,13 +45,13 @@
         </div>
       </div>
     </section>
-    <section id="price">
+    <section id="price"><img class="training__bg-img" src="assets/img/services_img.png" alt=""/>
       <div class="container">
         <div class="breadcrumbs"><a href="./">Главный  </a>
           <p>/</p>
           <p class="active">Тренинги</p>
         </div>
-        <div class="price__items"><img class="training__cube-img" src="assets/img/icons/cube_one.svg" alt=""/><img class="training__bg-img" src="assets/img/services_img.png" alt=""/>
+        <div class="price__items"><img class="training__cube-img" src="assets/img/icons/cube_one.svg" alt=""/>
           <div class="price__item row col-md-12 col-12">
             <div class="col-12 col-md-6">
               <p class="price__item-title">Бизнес-тренинг «Маркетинг – технология роста»</p>
