--- a/services.html
+++ b/services.html
@@ -45,14 +45,14 @@
         </div>
       </div>
     </section>
-    <section id="services">
+    <section id="services"><img class="training__bg-img" src="assets/img/services_img.png" alt=""/>
       <div class="container"> 
         <div class="breadcrumbs"><a href="./">Главный  </a>
           <p>/</p><a href="./services.html">Услуги</a>
           <p>/</p>
           <p class="active">Разрабатываем маркетинг-план: дорожная карта достижения целей</p>
         </div>
-        <div class="services__description"><img class="training__cube-img" src="assets/img/icons/cube_one.svg" alt=""/><img class="training__bg-img" src="assets/img/services_img.png" alt=""/>
+        <div class="services__description"><img class="training__cube-img" src="assets/img/icons/cube_one.svg" alt=""/>
           <p class="description-text col-lg-10 col-12">Разрабатываем маркетинг-план: дорожная карта достижения целей</p>
           <div class="description-plans col-xl-8">
             <div class="plans-item"><img src="assets/img/icons/logo2.svg" alt="icon"/>
