--- a/training.html
+++ b/training.html
@@ -45,14 +45,14 @@
         </div>
       </div>
     </section>
-    <section id="training">
+    <section id="training"><img class="training__bg-img" src="assets/img/services_img.png" alt=""/><img class="training__bg-cube" src="assets/img/icons/two-cubes.png" alt=""/>
       <div class="container">
         <div class="breadcrumbs"><a href="./">Главный  </a>
           <p>/</p><a href="./services.html">Тренинги</a>
           <p>/</p>
           <p class="active">Бизнес-тренинг «Маркетинг – технология роста»</p>
         </div>
-        <div class="training__description"><img class="training__cube-img" src="assets/img/icons/cube_one.svg" alt=""/><img class="training__line-img" src="assets/img/icons/train-line.svg" alt=""/><img class="training__bg-img" src="assets/img/services_img.png" alt=""/><img class="training__bg-cube" src="assets/img/icons/two-cubes.png" alt=""/>
+        <div class="training__description"><img class="training__cube-img" src="assets/img/icons/cube_one.svg" alt=""/><img class="training__line-img" src="assets/img/icons/train-line.svg" alt=""/>
           <p class="description-text col-lg-10 col-12">Бизнес-тренинг «Маркетинг – технология роста»</p>
           <p class="description-descr">Для кого: руководители компаний, маркетологи, продавцы</p>
           <p class="description-descrs">Цели бизнес-тренинга:</p>
